<resources>
    <string name="fsv.transition.search.layout" translatable="false">fsv_transition_search_layout</string>
    <string name="app_email" translatable="false">shoppist.justplay1@gmail.com</string>
    <string name="shoppist_widget" translatable="false">Shoppist Widget</string>
    <string name="app_name" translatable="false">Shoppist</string>
    <string name="title_activity_settings">Settings</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_shopping_lists">Shopping Lists</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_add_category">Add category</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_list">Add list</string>
    <string name="title_activity_add_list_item">Add list item</string>
    <string name="title_activity_account">Account</string>
    <string name="category_general">General</string>
    <string name="category_account">Account</string>
    <string name="category_system">System</string>
    <string name="category_about_app">About</string>
    <string name="category_notification">Notifications</string>
    <string name="notification_onn">Enable</string>
    <string name="notification_sound">Sound</string>
    <string name="notification_vibration">Vibration</string>
    <string name="lockscreen">Keep Screen On</string>
    <string name="lockscreen_summary">Check if you need to keep the screen turned on</string>
    <string name="account_log_out">Logout</string>
    <string name="app_version">App</string>
    <string name="feedback">Feedback</string>
    <string name="theme">Theme</string>
    <string name="select_color_theme">Select color theme</string>
    <string name="image_description">image</string>
    <string name="shopping_lists">Shopping lists</string>
    <string-array name="categories">
        <item>No category ! 1</item>
        <item>Vegetables, Mushrooms ! 2</item>
        <item>Fruits, Berries ! 3</item>
        <item>Dairy &amp; Eggs ! 4</item>
        <item>Meat products ! 5</item>
        <item>Seafood ! 6</item>
        <item>Frozen Foods &amp; Ice Cream ! 7</item>
        <item>Breakfast Foods ! 8</item>
        <item>Beverages ! 9</item>
        <item>Bread &amp; Bakery ! 10</item>
        <item>Confection ! 11</item>
        <item>Canned Goods ! 12</item>
        <item>Sauces, Spices &amp; Condiments ! 13</item>
        <item>Snacks &amp; Chips ! 14</item>
        <item>Oil, Vinegar &amp; Salad Dressing ! 15</item>
        <item>Soups, Grains &amp; Rice ! 16</item>
        <item>Pasta &amp; Noodles ! 17</item>
        <item>Household &amp; Cleaning Supplies ! 18</item>
        <item>Infant &amp; Child care ! 19</item>
        <item>Health &amp; Beauty ! 20</item>
        <item>Pet Supplies ! 21</item>
        <item>Office &amp; School Supplies ! 22</item>
        <item>Wine &amp; Spirits ! 23</item>
    </string-array>
    <string name="empty_list_text">List is empty</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_description">No description</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="name">Name</string>
    <string name="list_name_is_required">List name is required</string>
    <string name="no_priority">No priority</string>
    <string name="low">Low priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="high">High priority</string>
    <string name="new_list_added">New list added</string>
    <string name="list_updated">List updated</string>
    <string name="goods_added">Goods added</string>
    <string name="list_item_updated">List item updated</string>
    <string name="sort_by_category">Sort by category</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_time_created">Sort by time created</string>
    <string name="search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_check_all">Select all</string>
    <string name="action_uncheck_all">Unselect all</string>
    <string name="action_send_list">Send list</string>
    <string name="action_share">Share</string>
    <string name="action_move">Move to</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="synchronization">Synchronization</string>
    <string-array name="priority">
        <item>No priority</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string-array name="units">
        <item>No unit/No unit ! no_unit</item>
        <item>Kilogram/Kg ! 1</item>
        <item>Liter/L ! 2</item>
        <item>Gram/g ! 3</item>
        <item>Milligram/Mg ! 4</item>
        <item>Pound/lb ! 5</item>
        <item>Ounce/oz ! 6</item>
        <item>Ton/t ! 7</item>
        <item>Gallon/gal ! 8</item>
    </string-array>
    <string name="create">Create</string>
    <string name="full_unit_name_is_required">Full unit name is required</string>
    <string name="short_unit_name_is_required">Short unit name is required</string>
    <string name="full_unit_name">Full name</string>
    <string name="short_unit_name">Short name</string>
    <string name="currency_name_is_required">Currency name is required</string>
    <string name="new_unit">New unit</string>
    <string name="new_currency">New currency</string>
    <string name="price_is_required">Price is required</string>
    <string name="quantity_is_required">Quantity is required</string>
    <string name="category_name">Category name</string>
    <string name="new_color">New color</string>
    <string name="category_name_is_required">Category name is required</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="user_name_is_required">User name is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="new_category_added">New category added</string>
    <string name="category_is_updated">category is updated</string>
    <string name="color">Color</string>
    <string name="login_info">Use one account together with loved ones on phones to share lists and shopping together.</string>
    <string name="action_copy">Copy to</string>
    <string name="action_reset_categories">Reset categories</string>
    <string name="reset">Reset</string>
    <string name="error">Error</string>
    <string name="this_name_already_used">This name already used</string>
    <string name="this_color_already_used">This color already used</string>
    <string name="shopping_cart">Shopping cart</string>
    <string-array name="currency">
        <item>No currency ! no_currency</item>
        <item>USA ! 1</item>
        <item>EUR ! 2</item>
        <item>UAH ! 3</item>
        <item>RUB ! 4</item>
    </string-array>
    <string name="choose">Choose</string>
    <string name="please_wait">Please wait</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_and_time">Date and Time</string>
    <string-array name="reminder">
        <item>Not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Weekdays</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="recognition_not_present">Recogniser not present</string>
    <string name="send_to">Send to</string>
    <string name="confirm_to_delete">Confirm Before Deleting</string>
    <string name="confirm_to_delete_summary">Show confirmation dialog before delete list item</string>
    <string name="shopping_list">Shopping list</string>
    <string name="send_mail_using">Send Mail Using:</string>
    <string name="delete_the_item">Delete the item?</string>
    <string name="delete_the_list">Delete the list?</string>
    <string name="delete_the_category">Delete the category?</string>
    <string name="select_with_animation">Select With Animation</string>
    <string name="delete_with_animation">Delete With Animation</string>
    <string name="add">Add</string>
    <string name="add_user">Add user</string>
    <string name="help_shopping_list_items">Help: Shopping list Items</string>
    <string name="help_shopping_lists">Help: Shopping Lists</string>
    <string name="help_categories">Help: Categories</string>
    <string name="help_account">Help: Account</string>
    <string name="help_create_new_list">Create new list</string>
    <string name="help_enter_list_name">Enter list name and click done button</string>
    <string name="help_fill_list_name">or long click on done button to save the list and add another list</string>
    <string name="help_create_new_list_item">Add new product</string>
    <string name="help_enter_name_list_item">Enter the product name</string>
    <string name="help_list_item_parameters">Fill in other parameters(if needed)</string>
    <string name="help_list_item_done_click">Click done button to save product and return to list</string>
    <string name="help_list_item_done_long_click">or long click on done button to save the product and add another product</string>
    <string name="help_list_usability">1) Tap to select item \n2) Long tap to select item \n3) Tap to show note</string>
    <string name="help_swipe_to_buy">Swipe item to buy, or delete from shopping cart</string>
    <string name="help_swipe_to_refresh">Swipe to refresh the list</string>
    <string name="help_create_new_category">Create new category</string>
    <string name="help_fill_category_info">Enter a name of the category, select the color and click done button</string>
    <string name="help_fill_category_info2">or long click on done button to save the category and add another category</string>
    <string name="help_short_and_long_tap_to_select_item">1) Tap to select item \n2) Long tap to select item</string>
    <string name="help_long_tap_to_select_item">Long tap to select item</string>
    <string name="help_tap_to_edit_item">Tap to edit item</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="unknown_person">Unknown</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="sign_in_error_status">Error signing in.</string>
    <string name="logo_content_description">Logo</string>
    <string name="parse_ui_progress_dialog_text">Loading&#8230;</string>
    <string name="loading_data">Loading data&#8230;</string>
    <string name="password_input_hint">Password</string>
    <string name="email_input_hint">Email</string>
    <string name="confirm_password_input_hint">Re-enter password</string>
    <string name="create_account_button_label">Create account</string>
    <string name="goods">Goods</string>
    <string name="action_strike_out_all">Strike out all</string>
    <string name="action_return_all_to_list">Return all to list</string>
    <string name="action_strike_out">Strike out</string>
    <string name="action_return_to_list">Return to list</string>
    <string name="sort_manually_mode">Sort manually mode</string>
    <string name="expand_all">Expand all</string>
    <string name="collapse_all">Collapse all</string>
    <string name="shopping">Shopping</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="action_reset_goods">Reset goods</string>
</resources>