<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/sort_by_category"
                android:title="@string/sort_by_category" />
            <item
                android:id="@+id/sort_by_time_created"
                android:title="@string/sort_by_time_created" />
        </menu>
    </item>

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu_white"
        android:title="@null"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_check_all"
                android:title="@string/action_check_all" />
            <item
                android:id="@+id/menu_expand_all"
                android:title="@string/expand_all" />
            <item
                android:id="@+id/menu_collapse_all"
                android:title="@string/collapse_all" />
            <item
                android:id="@+id/menu_reset"
                android:title="@string/action_reset_goods" />
        </menu>
    </item>
</menu>