<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/font_size_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/small_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small" />

    <RadioButton
        android:id="@+id/medium_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/medium" />

    <RadioButton
        android:id="@+id/large_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/large" />
</RadioGroup>