<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/add_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_create_new_list_item" />

            <ImageView
                android:id="@+id/add_button_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/add_button" />

            <TextView
                android:id="@+id/add_list_item_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_enter_name_list_item" />

            <ImageView
                android:id="@+id/add_list_item_name_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/add_shopping_list_item" />

            <TextView
                android:id="@+id/add_list_item_parameters_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_list_item_parameters" />

            <ImageView
                android:id="@+id/add_list_item_parameters_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/add_shopping_list_item_parameters" />

            <TextView
                android:id="@+id/done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_list_item_done_click" />

            <ImageView
                android:id="@+id/done_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/done_btn" />

            <TextView
                android:id="@+id/long_done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_list_item_done_long_click" />

            <ImageView
                android:id="@+id/long_done_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/done_btn_long_click" />

            <TextView
                android:id="@+id/list_usability_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_list_usability" />

            <ImageView
                android:id="@+id/list_usability_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/shopping_list_items_usability" />

            <TextView
                android:id="@+id/swipe_to_by_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_swipe_to_buy" />

            <ImageView
                android:id="@+id/swipe_to_by_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/help_image_margin_right"
                android:layout_marginRight="@dimen/help_image_margin_right"
                android:src="@drawable/swipe_to_buy" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>