<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/email_input_hint"
            app:met_maxCharacters="50"
            app:met_primaryColor="?colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_password_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/password_input_hint"
            app:met_minCharacters="6"
            app:met_primaryColor="?colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_confirm_password_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password_input_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/confirm_password_input_hint"
            app:met_minCharacters="6"
            app:met_primaryColor="?colorAccent" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_selector"
            android:text="@string/create_account_button_label"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>

